welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:5: error: ')' expected but 'if' found.
  if (a<b && b<c && equalOk==false) {
  ^